Fixes and Standardisation. write settings to file
added file to store various settings needed like the start and end time